Create a script for the tags, a macro for jenkins and two jobs
Change-Id: I1cc7bdce03e97236f3ddf3b1e82addeb5a8a90ca

--- a/puppet/modules/runtime_project/files/jenkins_job_builder/config/macros.yaml
+++ b/puppet/modules/runtime_project/files/jenkins_job_builder/config/macros.yaml
@@ -208,7 +208,7 @@
 - builder:
     name: tarball
     builders:
-      - shell: "/usr/local/jenkins/slave_scripts/run-tarball.sh {github-org} {project}"
+      - shell: "/usr/local/jenkins/slave_scripts/run-tarball.sh {name} {tarball-site}"
 
 - builder:
     name: devstack-checkout
@@ -254,6 +254,11 @@
     name: puppet-apply-single-node
     builders:
       - shell: "sudo /usr/bin/salt-call event.fire_master \"{param}\" \"{param}\""
+
+  builder:
+    name: publish-tags
+    builders:
+      - shell: "/usr/local/jenkins/runtime_script/tags.sh {parameter1} {parameter2} {parameter3}"
 
 #Puppet apply for all the nodes, first master then the nodes (review,util,ci)
 - builder:
