Update Gerrit from 2.4 to 2.8 & Jeepyb module
- New gerrit version 2.8
- Jeepyb commit version (b12ab5feacc56110d45b24f1f37db0d0abcf354e)

Change-Id: I32ba0e1aa830b1cb006694fdbdf107ad7467f4d6

--- a/puppet/modules/runtime_project/files/hiera/layouts/review.yaml
+++ b/puppet/modules/runtime_project/files/hiera/layouts/review.yaml
@@ -29,7 +29,7 @@ classes:
   - sysadmin_config::manage_servers
 
 # use pind version for jeepyb on all servers
-jeepyb_config::jeepyb_version: '3c9a851fa93518bde584a75f6dd715b54f878e72'
+jeepyb_config::jeepyb_version: 'b12ab5feacc56110d45b24f1f37db0d0abcf354e'
 
 # Gerrit tool
 cdk_project::gerrit::vhost_name:                       "%{::maestro::node_vhost_lookup::vname}" #$gerrit_vhost
@@ -65,7 +65,7 @@ cdk_project::gerrit::httpd_acceptorthreads:            ''
 cdk_project::gerrit::httpd_minthreads:                 ''
 cdk_project::gerrit::httpd_maxthreads:                 ''
 cdk_project::gerrit::httpd_maxwait:                    '5000min'
-cdk_project::gerrit::war:                              'http://tarballs.openstack.org/ci/gerrit-2.4.4-14-gab7f4c1.war'
+cdk_project::gerrit::war:                              'http://tarballs.openstack.org/ci/gerrit/gerrit-v2.8.4.15.6dc8444.war'
 cdk_project::gerrit::contactstore:                     false
 cdk_project::gerrit::contactstore_appsec:              ''
 cdk_project::gerrit::contactstore_pubkey:              ''
@@ -74,6 +74,7 @@ cdk_project::gerrit::script_user:                      'gerrit2'
 cdk_project::gerrit::script_key_file:                  '/home/gerrit2/.ssh/gerrit2'
 cdk_project::gerrit::script_logging_conf:              '/home/gerrit2/.sync_logging.conf'
 cdk_project::gerrit::projects_file:                    'review.projects.yaml.erb'
+cdk_project::gerrit::projects_config:                  'review.projects.ini.erb'
 cdk_project::gerrit::github_username:                  ''  # "%{::domain}-gerrit"
 cdk_project::gerrit::github_oauth_token:               ''
 cdk_project::gerrit::github_project_username:          ''
