--- a/puppet/modules/runtime_project/files/gerrit/acls/production/allprojects_default.project.config
+++ b/puppet/modules/runtime_project/files/gerrit/acls/production/allprojects_default.project.config
@@ -12,6 +12,7 @@
     create = group Project Bootstrappers
     create = group Release Managers
     pushMerge = group Project Bootstrappers
+    pushSignedTag = group Project Bootstrappers
 [access "refs/heads/*"]
     label-Code-Review = -2..+2 group Project Bootstrappers
     label-Code-Review = -1..+1 group Registered Users
@@ -48,12 +49,46 @@
     create = group Continuous Integration Tools
     push = group Continuous Integration Tools
 [capability] 
-   administrateServer = group Administrators 
-   priority = batch group Non-Interactive Users
+    accessDatabase = group Administrators
+    administrateServer = group Administrators
+    priority = batch group Non-Interactive Users
     createProject = group Project Bootstrappers
+    streamEvents = group Registered Users
+    runAs = group Project Bootstrappers
 [access "refs/zuul/*"]
     create = group Continuous Integration Tools
     push = +force group Continuous Integration Tools
     pushMerge = group Continuous Integration Tools
 [access "refs/for/refs/zuul/*"]
     pushMerge = group Continuous Integration Tools
+[accounts]
+    sameGroupVisibility = deny group CLA Accepted - ICLA
+[contributor-agreement "ICLA"]
+    description = OpenStack Individual Contributor License Agreement
+    requireContactInformation = true
+    agreementUrl = static/cla.html
+    autoVerify = group CLA Accepted - ICLA
+    accepted = group CLA Accepted - ICLA
+[label "Approved"]
+    function = MaxWithBlock
+    value = -1 Work in progress
+    value = 0 Ready for reviews
+    value = +1 Approved
+[label "Verified"]
+    function = MaxWithBlock
+    value = -2 Fails
+    value = -1 Doesn't seem to work
+    value = 0 No score
+    value = +1 Works for me
+    value = +2 Verified
+[label "Code-Review"]
+    function = MaxWithBlock
+    abbreviation = R
+    copyMinScore = true
+    copyAllScoresOnTrivialRebase = true
+    copyAllScoresIfNoCodeChange = true
+    value = -2 Do not merge
+    value = -1 I would prefer that you didn't merge this
+    value = 0 No score
+    value = +1 Looks good to me, but someone else must approve
+    value = +2 Looks good to me (core reviewer)
