--- a/puppet/modules/runtime_project/files/zuul/config/production/layout.yaml
+++ b/puppet/modules/runtime_project/files/zuul/config/production/layout.yaml
@@ -21,12 +21,23 @@ pipelines:
     description: Newly uploaded patchsets enter this pipeline to receive an initial +/-1 Verified vote from Jenkins.
     failure-message: Build failed.  For information on how to proceed, see https://wiki.openstack.org/wiki/GerritJenkinsGit#Test_Failures
     manager: IndependentPipelineManager
-    precedence: low
+    source: gerrit
+    precedence: normal
+    require:
+      open: True
+      current-patchset: True
     trigger:
       gerrit:
         - event: patchset-created
+        - event: change-restored
         - event: comment-added
-          comment_filter: (?i)^\s*recheck(( (?:bug|lp)[\s#:]*(\d+))|( no bug))\s*$
+          comment: (?i)^(Patch Set [0-9]+:)?( [\w\\+-]*)*(\n\n)?\s*(recheck|reverify)
+        - event: comment-added
+          require-approval:
+            - verified: [-1, -2]
+              username: jenkins
+          approval:
+            - approved: 1
     success:
       gerrit:
         verified: 1
@@ -38,14 +49,24 @@ pipelines:
     description: Changes that have been approved by core developers are enqueued in order in this pipeline, and if they pass tests in Jenkins, will be merged.
     failure-message: Build failed.  For information on how to proceed, see https://wiki.openstack.org/wiki/GerritJenkinsGit#Test_Failures
     manager: DependentPipelineManager
-    precedence: low
+    source: gerrit
+    precedence: high
+    require:
+      open: True
+      current-patchset: True
+      approval:
+        - verified: [1, 2]
+          username: jenkins
+        - approved: 1
     trigger:
       gerrit:
         - event: comment-added
           approval:
             - approved: 1
         - event: comment-added
-          comment_filter: (?i)^\s*reverify(( (?:bug|lp)[\s#:]*(\d+))|( no bug))\s*$
+          approval:
+            - verified: 1
+          username: jenkins
     start:
       gerrit:
         verified: 0
@@ -56,67 +77,173 @@ pipelines:
     failure:
       gerrit:
         verified: -2
+    window-floor: 20
+    window-increase-factor: 2
 
   - name: post
     description: This pipeline runs jobs that operate after each change is merged.
     manager: IndependentPipelineManager
+    source: gerrit
     precedence: low
     trigger:
       gerrit:
         - event: ref-updated
-          ref: ^(?!(devnull|refs/.*)).*$
+          ref: ^(?!refs/).*$
+
+  - name: tag
+    description: This pipeline runs jobs in response to any tag event.
+    manager: IndependentPipelineManager
+    source: gerrit
+    precedence: high
+    trigger:
+      gerrit:
+        - event: ref-updated
+          ref: ^refs/tags/.*$
 
   - name: pre-release
     description: This pipeline runs jobs on projects in response to pre-release tags.
     manager: IndependentPipelineManager
+    source: gerrit
     precedence: high
     trigger:
       gerrit:
         - event: ref-updated
-          ref: ^refs/tags/([0-9]+\.)+[0-9]*(alpha|beta|candidate|rc|a|b|c|r|g)[0-9]*$
+          ref: ^refs/tags/([0-9]+\.?)+(alpha|beta|candidate|rc|a|b|c|r|g)[0-9]*$
 
   - name: release
     description: When a commit is tagged as a release, this pipeline runs jobs that publish archives and documentation.
     manager: IndependentPipelineManager
+    source: gerrit
     precedence: high
     trigger:
       gerrit:
         - event: ref-updated
-          ref: ^refs/tags/([0-9]+\.)+[0-9]+$
+          ref: ^refs/tags/([0-9]+\.)*[0-9]+$
 
   - name: silent
     description: This pipeline is used for silently testing new jobs.
     manager: IndependentPipelineManager
+    source: gerrit
     precedence: low
     trigger:
       gerrit:
         - event: patchset-created
         - event: comment-added
-          comment_filter: (?i)^\s*recheck(( (?:bug|lp)[\s#:]*(\d+))|( no bug))\s*$
+          comment: (?i)^(Patch Set [0-9]+:)?( [\w\\+-]*)*(\n\n)?\s*(recheck|reverify)
 
   - name: experimental
     description: On-demand pipeline for requesting a run against a set of jobs that are not yet gating. Leave review comment of "check experimental" to run jobs in this pipeline.
     manager: IndependentPipelineManager
+    source: gerrit
     precedence: low
     trigger:
       gerrit:
         - event: comment-added
-          comment_filter: (?i)^\s*check experimental\s*$
+          comment: (?i)^(Patch Set [0-9]+:)?( [\w\\+-]*)*(\n\n)?\s*check experimental\s*$
     success:
-      gerrit:
-        force-message: true
+      gerrit: {}
     failure:
-      gerrit:
-        force-message: true
+      gerrit: {}
 
   - name: periodic
     description: Jobs in this queue are triggered on a timer.
     manager: IndependentPipelineManager
+    source: gerrit
     precedence: low
     trigger:
       timer:
         - time: '0 6 * * *'
 
+  - name: periodic-stable
+    description: Periodic checks of the stable branches.
+    manager: IndependentPipelineManager
+    source: gerrit
+    precedence: low
+    trigger:
+      timer:
+        - time: '1 6 * * *'
+    failure:
+      smtp:
+        from: jenkins@openstack.org
+        to: openstack-stable-maint@lists.openstack.org
+        subject: 'Stable check of {change.project} failed'
+
+  - name: periodic-qa
+    description: Periodic jobs for the QA team.
+    manager: IndependentPipelineManager
+    source: gerrit
+    precedence: low
+    trigger:
+      timer:
+        - time: '2 6 * * *'
+    failure:
+      smtp:
+        from: jenkins@openstack.org
+        to: openstack-qa@lists.openstack.org
+        subject: 'Periodic jobs for {change.project} failed'
+
+  - name: check-tripleo
+    description: >
+      Newly uploaded patchsets enter this pipeline to receive an initial +/-1
+      Verified vote from Jenkins. This is used for TripleO patchsets only so
+      that if the TripleO cloud suffers a failure, folk looking can tell that
+      there isn't a system infra problem. only a TripleO specific problem.
+      Once the TripleO test cloud is multi region and has some months of
+      proven stability this will be folded back into the normal check pipeline.
+    failure-message: >
+      Build failed.  For information on how to proceed, see
+      https://wiki.openstack.org/wiki/GerritJenkinsGit#Test_Failures
+    manager: IndependentPipelineManager
+    source: gerrit
+    precedence: normal
+    require:
+      open: True
+      current-patchset: True
+    trigger:
+      gerrit:
+        - event: patchset-created
+        - event: change-restored
+        - event: comment-added
+          comment: (?i)^(Patch Set [0-9]+:)?( [\w\\+-]*)*(\n\n)?\s*(recheck|reverify)
+    success:
+      gerrit: {}
+    failure:
+      gerrit: {}
+
+  - name: experimental-tripleo
+    description: >
+      On-demand pipeline for requesting a run against a tripleo experimental
+      jobs - slower and running without redundancy - so not yet gating. Leave
+      review comment of "check experimental" to run jobs in this pipeline.
+    manager: IndependentPipelineManager
+    source: gerrit
+    precedence: low
+    trigger:
+      gerrit:
+        - event: comment-added
+          comment: (?i)^(Patch Set [0-9]+:)?( [\w\\+-]*)*(\n\n)?\s*check experimental\s*$
+    success:
+      gerrit: {}
+    failure:
+      gerrit: {}
+
+  - name: merge-check
+    description: >
+      Each time a change merges, this pipeline verifies that all open changes
+      on the same project are still mergeable.
+    manager: IndependentPipelineManager
+    source: gerrit
+    precedence: low
+    require:
+      approval:
+        - verified: [1, 2]
+          username: jenkins
+    trigger:
+      zuul:
+        - event: project-change-merged
+    merge-failure:
+      gerrit:
+        verified: -1
 
 jobs:
   - name: ^.*$
