Adding workflow (before WIP) field to gerrit
- This new functionality is in sustitution of the old WIP button.
  the field already exists but the now the name is worflow
  instead of approved

Change-Id: Id275bc7d03ec3ebf1221d4c32e301f04ff0ffdcd

--- a/puppet/modules/runtime_project/files/gerrit/acls/production/allprojects_default.project.config
+++ b/puppet/modules/runtime_project/files/gerrit/acls/production/allprojects_default.project.config
@@ -1,86 +1,70 @@
-[project]
-    description = Rights inherited by all other projects
-    state = active
 [access "refs/*"]
-    read = group Anonymous Users
-    pushTag = group Continuous Integration Tools
-    pushTag = group Project Bootstrappers
-    pushTag = group Release Managers
+    create = group Project Bootstrappers
+    create = group Release Managers
     forgeAuthor = group Registered Users
     forgeCommitter = group Project Bootstrappers
     push = +force group Project Bootstrappers
-    create = group Project Bootstrappers
-    create = group Release Managers
     pushMerge = group Project Bootstrappers
-    pushSignedTag = group Project Bootstrappers
+    pushTag = group Continuous Integration Tools
+    pushTag = group Project Bootstrappers
+    pushTag = group Release Managers
+    read = group Anonymous Users
+[access "refs/for/refs/*"]
+    push = group Registered Users
+[access "refs/for/refs/zuul/*"]
+    pushMerge = group Continuous Integration Tools
 [access "refs/heads/*"]
     label-Code-Review = -2..+2 group Project Bootstrappers
     label-Code-Review = -1..+1 group Registered Users
     label-Verified = -2..+2 group Continuous Integration Tools
     label-Verified = -2..+2 group Project Bootstrappers
     label-Verified = -1..+1 group External Testing Tools
+    label-Workflow = -1..+0 group Change Owner
+    label-Workflow = -1..+1 group Project Bootstrappers
     submit = group Continuous Integration Tools
     submit = group Project Bootstrappers
-    label-Approved = +0..+1 group Project Bootstrappers
-[access "refs/meta/config"]
-    read = group Project Owners
-    push = group Administrators
-[access "refs/for/refs/*"]
-    push = group Registered Users
 [access "refs/heads/milestone-proposed"]
-    exclusiveGroupPermissions = label-Approved label-Code-Review
+    exclusiveGroupPermissions = label-Code-Review label-Workflow
     label-Code-Review = -2..+2 group Project Bootstrappers
     label-Code-Review = -2..+2 group Release Managers
     label-Code-Review = -1..+1 group Registered Users
+    label-Workflow = +0..+1 group Project Bootstrappers
+    label-Workflow = +0..+1 group Release Managers
     owner = group Release Managers
-    label-Approved = +0..+1 group Project Bootstrappers
-    label-Approved = +0..+1 group Release Managers
 [access "refs/heads/stable/*"]
+    exclusiveGroupPermissions = label-Code-Review label-Workflow
     forgeAuthor = group Stable Maintainers
     forgeCommitter = group Stable Maintainers
-    exclusiveGroupPermissions = label-Approved label-Code-Review
     label-Code-Review = -2..+2 group Project Bootstrappers
     label-Code-Review = -2..+2 group Stable Maintainers
     label-Code-Review = -1..+1 group Registered Users
-    label-Approved = +0..+1 group Project Bootstrappers
-    label-Approved = +0..+1 group Stable Maintainers
+    label-Workflow = +0..+1 group Project Bootstrappers
+    label-Workflow = +0..+1 group Stable Maintainers
+[access "refs/meta/config"]
+    push = group Administrators
+    read = group Project Owners
 [access "refs/meta/openstack/*"]
-    read = group Continuous Integration Tools
     create = group Continuous Integration Tools
     push = group Continuous Integration Tools
-[capability] 
-    accessDatabase = group Administrators
-    administrateServer = group Administrators
-    priority = batch group Non-Interactive Users
-    createProject = group Project Bootstrappers
-    streamEvents = group Registered Users
-    runAs = group Project Bootstrappers
+    read = group Continuous Integration Tools
 [access "refs/zuul/*"]
     create = group Continuous Integration Tools
     push = +force group Continuous Integration Tools
     pushMerge = group Continuous Integration Tools
-[access "refs/for/refs/zuul/*"]
-    pushMerge = group Continuous Integration Tools
 [accounts]
     sameGroupVisibility = deny group CLA Accepted - ICLA
+[capability]
+    accessDatabase = group Administrators
+    administrateServer = group Administrators
+    createProject = group Project Bootstrappers
+    priority = batch group Non-Interactive Users
+    runAs = group Project Bootstrappers
+    streamEvents = group Registered Users
 [contributor-agreement "ICLA"]
-    description = OpenStack Individual Contributor License Agreement
-    requireContactInformation = true
+    accepted = group CLA Accepted - ICLA
     agreementUrl = static/cla.html
     autoVerify = group CLA Accepted - ICLA
-    accepted = group CLA Accepted - ICLA
-[label "Approved"]
-    function = MaxWithBlock
-    value = -1 Work in progress
-    value = 0 Ready for reviews
-    value = +1 Approved
-[label "Verified"]
-    function = MaxWithBlock
-    value = -2 Fails
-    value = -1 Doesn't seem to work
-    value = 0 No score
-    value = +1 Works for me
-    value = +2 Verified
+    description = OpenStack IndividualContributor License Agreement
 [label "Code-Review"]
     function = MaxWithBlock
     abbreviation = R
@@ -88,7 +72,21 @@
     copyAllScoresOnTrivialRebase = true
     copyAllScoresIfNoCodeChange = true
     value = -2 Do not merge
-    value = -1 I would prefer that you didn't merge this
+    value = -1 This patch needs further work before it can be merged
     value = 0 No score
     value = +1 Looks good to me, but someone else must approve
     value = +2 Looks good to me (core reviewer)
+[label "Verified"]
+    function = MaxWithBlock
+    value = -2 Fails
+    value = -1 Doesn't seem to work
+    value = 0 No score
+    value = +1 Works for me
+    value = +2 Verified
+[label "Workflow"]
+    function = MaxWithBlock
+    value = -1 Work in progress
+    value = 0 Ready for reviews
+    value = +1 Approved
+[project]
+    description = Rights inherited by all other projects
