--- a/puppet/modules/runtime_project/files/gerrit/acls/production/forj-config.config
+++ b/puppet/modules/runtime_project/files/gerrit/acls/production/forj-config.config
@@ -1,6 +1,6 @@
 [access "refs/heads/*"]
-        label-Approved = +0..+1 group forj-core
         label-Code-Review = -2..+2 group forj-core
+        label-Workflow = +0..+1 group forj-core
         push = group Administrators
 [access "refs/tags/*"]
         create = group forj-core
