--- a/puppet/modules/runtime_project/files/gerrit/acls/production/tutorials.config
+++ b/puppet/modules/runtime_project/files/gerrit/acls/production/tutorials.config
@@ -3,7 +3,7 @@
         create = group tutorials-core
 [access "refs/heads/*"]
         label-Code-Review = -2..+2 group tutorials-core
-        label-Approved = +0..+1 group tutorials-core
+        label-Workflow = +0..+1 group tutorials-core
         workInProgress = group tutorials-core
 [project]
         state = active
