--- a/puppet/modules/runtime_project/files/gerrit/acls/templates/cookiecutter.config
+++ b/puppet/modules/runtime_project/files/gerrit/acls/templates/cookiecutter.config
@@ -1,6 +1,6 @@
 [access "refs/heads/*"]
-        label-Approved = +0..+1 group cookiecutter-core
         label-Code-Review = -2..+2 group cookiecutter-core
+        label-Workflow = +0..+1 group cookiecutter-core
 [access "refs/tags/*"]
         create = group cookiecutter-core
         pushTag = group cookiecutter-core
