--- a/puppet/modules/runtime_project/files/gerrit/acls/templates/grenade.config
+++ b/puppet/modules/runtime_project/files/gerrit/acls/templates/grenade.config
@@ -1,11 +1,11 @@
 [access "refs/heads/*"]
         label-Code-Review = -2..+2 group grenade-core
-        label-Approved = +0..+1 group grenade-core
+        label-Workflow = +0..+1 group grenade-core
 [access "refs/heads/stable/*"]
-        exclusiveGroupPermissions = label-Code-Review label-Approved
+        exclusiveGroupPermissions = label-Code-Review label-Workflow
         label-Code-Review = -2..+2 group grenade-core
         label-Code-Review = -1..+1 group Registered Users
-        label-Approved = +0..+1 group grenade-core
+        label-Workflow = +0..+1 group grenade-core
 [project]
         state = active
 [receive]
