--- a/puppet/modules/runtime_project/files/gerrit/acls/templates/pbr.config
+++ b/puppet/modules/runtime_project/files/gerrit/acls/templates/pbr.config
@@ -1,5 +1,5 @@
 [access "refs/heads/*"]
-        label-Approved = +0..+1 group pbr-core
+        label-Workflow = +0..+1 group pbr-core
         label-Code-Review = -2..+2 group pbr-core
 [access "refs/tags/*"]
         create = group pbr-core
