--- a/puppet/modules/runtime_project/files/gerrit/acls/templates/sandbox.config
+++ b/puppet/modules/runtime_project/files/gerrit/acls/templates/sandbox.config
@@ -1,9 +1,9 @@
 [access "refs/heads/*"]
         label-Code-Review = -2..+2 group openstack-cla
-        label-Approved = +0..+1 group openstack-cla
+        label-Workflow = +0..+1 group openstack-cla
 [access "refs/heads/milestone-proposed"]
         label-Code-Review = -2..+2 group openstack-cla
-        label-Approved = +0..+1 group openstack-cla
+        label-Workflow = +0..+1 group openstack-cla
 [project]
         state = active
 [receive]
