--- a/puppet/modules/runtime_project/files/zuul/config/production/layout.yaml
+++ b/puppet/modules/runtime_project/files/zuul/config/production/layout.yaml
@@ -19,7 +19,8 @@ includes:
 pipelines:
   - name: check
     description: Newly uploaded patchsets enter this pipeline to receive an initial +/-1 Verified vote from Jenkins.
-    failure-message: Build failed.  For information on how to proceed, see https://wiki.openstack.org/wiki/GerritJenkinsGit#Test_Failures
+    success-message: Build succeeded (check pipeline).
+    failure-message: Build failed (check pipeline).  For information on how to proceed, see http://docs.openstack.org/infra/manual/developers.html#automated-testing
     manager: IndependentPipelineManager
     source: gerrit
     precedence: normal
@@ -37,7 +38,7 @@ pipelines:
             - verified: [-1, -2]
               username: jenkins
           approval:
-            - approved: 1
+            - workflow: 1
     success:
       gerrit:
         verified: 1
@@ -47,7 +48,8 @@ pipelines:
 
   - name: gate
     description: Changes that have been approved by core developers are enqueued in order in this pipeline, and if they pass tests in Jenkins, will be merged.
-    failure-message: Build failed.  For information on how to proceed, see https://wiki.openstack.org/wiki/GerritJenkinsGit#Test_Failures
+    success-message: Build succeeded (gate pipeline).
+    failure-message: Build failed (gate pipeline).  For information on how to proceed, see http://docs.openstack.org/infra/manual/developers.html#automated-testing
     manager: DependentPipelineManager
     source: gerrit
     precedence: high
@@ -57,12 +59,12 @@ pipelines:
       approval:
         - verified: [1, 2]
           username: jenkins
-        - approved: 1
+        - workflow: 1
     trigger:
       gerrit:
         - event: comment-added
           approval:
-            - approved: 1
+            - workflow: 1
         - event: comment-added
           approval:
             - verified: 1
@@ -108,7 +110,7 @@ pipelines:
     trigger:
       gerrit:
         - event: ref-updated
-          ref: ^refs/tags/([0-9]+\.?)+(alpha|beta|candidate|rc|a|b|c|r|g)[0-9]*$
+          ref: ^refs/tags/[0-9]+(\.[0-9]+)*(a|b|rc)[0-9]+$
 
   - name: release
     description: When a commit is tagged as a release, this pipeline runs jobs that publish archives and documentation.
@@ -118,7 +120,7 @@ pipelines:
     trigger:
       gerrit:
         - event: ref-updated
-          ref: ^refs/tags/([0-9]+\.)*[0-9]+$
+          ref: ^refs/tags/[0-9]+(\.[0-9]+)*$
 
   - name: silent
     description: This pipeline is used for silently testing new jobs.
@@ -133,6 +135,8 @@ pipelines:
 
   - name: experimental
     description: On-demand pipeline for requesting a run against a set of jobs that are not yet gating. Leave review comment of "check experimental" to run jobs in this pipeline.
+    success-message: Build succeeded (experimental pipeline).
+    failure-message: Build failed (experimental pipeline).
     manager: IndependentPipelineManager
     source: gerrit
     precedence: low
@@ -190,9 +194,10 @@ pipelines:
       there isn't a system infra problem. only a TripleO specific problem.
       Once the TripleO test cloud is multi region and has some months of
       proven stability this will be folded back into the normal check pipeline.
+    success-message: Build succeeded (check-tripleo pipeline).
     failure-message: >
-      Build failed.  For information on how to proceed, see
-      https://wiki.openstack.org/wiki/GerritJenkinsGit#Test_Failures
+      Build failed (check-tripleo pipeline).  For information on how to proceed, see
+      http://docs.openstack.org/infra/manual/developers.html#automated-testing
     manager: IndependentPipelineManager
     source: gerrit
     precedence: normal
@@ -215,6 +220,8 @@ pipelines:
       On-demand pipeline for requesting a run against a tripleo experimental
       jobs - slower and running without redundancy - so not yet gating. Leave
       review comment of "check experimental" to run jobs in this pipeline.
+    success-message: Build succeeded (experimental-tripleo).
+    failure-message: Build failed (experimental-tripleo).
     manager: IndependentPipelineManager
     source: gerrit
     precedence: low
@@ -231,6 +238,7 @@ pipelines:
     description: >
       Each time a change merges, this pipeline verifies that all open changes
       on the same project are still mergeable.
+    failure-message: Build failed (merge-check pipeline).
     manager: IndependentPipelineManager
     source: gerrit
     precedence: low
@@ -245,9 +253,12 @@ pipelines:
       gerrit:
         verified: -1
 
+
 jobs:
   - name: ^.*$
     parameter-function: set_log_url
+  - name: ^.*-nv$
+    voting: false
 
 projects:
   - name: tutorials
