Fix defect #240: using the secure password for gerrit mysql.
Change-Id: I945fada5c8c31dc53a8d60900e7b0db7591a3f3e

--- a/puppet/modules/runtime_project/files/hiera/layouts/review.yaml
+++ b/puppet/modules/runtime_project/files/hiera/layouts/review.yaml
@@ -79,8 +79,8 @@ cdk_project::gerrit::github_username:                  ''  # "%{::domain}-gerrit
 cdk_project::gerrit::github_oauth_token:               ''
 cdk_project::gerrit::github_project_username:          ''
 cdk_project::gerrit::github_project_password:          ''
-cdk_project::gerrit::mysql_password:                   'changeme'
-cdk_project::gerrit::mysql_root_password:              'changeme'
+cdk_project::gerrit::mysql_password:                   "%{hiera('mysql_password')}"
+cdk_project::gerrit::mysql_root_password:              "%{hiera('mysql_root_password')}"
 cdk_project::gerrit::trivial_rebase_role_id:           "trivial-rebase@review.%{::domain}"
 #TODO needs autogeneration at some point
 cdk_project::gerrit::email_private_key:                'FU7D198KY5xEx55/+YA1piHcfhwy/fo8sZk='
