upstream allows any registered users to rebase
This is a great idea, we should support the same on
redstone.  Follow the upstream commit here:
https://review.openstack.org/#/c/155808/1/doc/source/gerrit.rst

Change-Id: Iacd0e70b2e214aea92b34667569e1d5d527b328f

--- a/puppet/modules/runtime_project/files/gerrit/acls/production/allprojects_default.project.config
+++ b/puppet/modules/runtime_project/files/gerrit/acls/production/allprojects_default.project.config
@@ -21,6 +21,7 @@
     label-Verified = -1..+1 group External Testing Tools
     label-Workflow = -1..+0 group Change Owner
     label-Workflow = -1..+1 group Project Bootstrappers
+    rebase = group Registered Users
     submit = group Continuous Integration Tools
     submit = group Project Bootstrappers
 [access "refs/heads/milestone-proposed"]
