Setting up exclude option in ci and review backups
Change-Id: I4e829b26aa80fee3992882a15613827286ad3b4e

--- a/puppet/modules/runtime_project/files/hiera/layouts/review.yaml
+++ b/puppet/modules/runtime_project/files/hiera/layouts/review.yaml
@@ -129,6 +129,7 @@ cdk_projects::gerrit::first_account_classes:
 maestro::backup::set_app_backup:
   gerrit:
     app_location:     '/home/gerrit2'
+    exclude:          ''
     db_name:          'reviewdb'
     db_backup_tool:   'mysqldump'
     db_user:          'gerrit2'
