--- a/puppet/modules/runtime_project/files/hiera/layouts/ci.yaml
+++ b/puppet/modules/runtime_project/files/hiera/layouts/ci.yaml
@@ -75,6 +75,7 @@ cdk_project::zuul::gearman_workers:   ''
 maestro::backup::set_app_backup:
   jenkins:
     app_location:     '/var/lib/jenkins'
+    exclude:          '/var/lib/jenkins/jobs'
     db_name:          ''
     db_backup_tool:   ''
     db_user:          ''
