add install_method for dpkg install
 Provide a method for installing jenkins
    from dpkg download location.  Adds
    a new option: install_method.  When
    set to dpkg, we can use a url for deb
    package to use.

Change-Id: I26d5df8fff35aae3bee0b139eabc33f5fc6fa360

--- a/puppet/modules/runtime_project/files/hiera/layouts/ci.yaml
+++ b/puppet/modules/runtime_project/files/hiera/layouts/ci.yaml
@@ -30,6 +30,9 @@ classes:
   - sysadmin_config::manage_servers
 
 #Jenkins tool
+jenkins_config::master::install_method:    'dpkg'
+jenkins_config::master::jenkins_dpkg_repo: 'http://pkg.jenkins-ci.org/debian-stable/binary/jenkins_1.565.3_all.deb'
+
 cdk_project::jenkins::vhost_name:               "%{::maestro::node_vhost_lookup::vname}"
 cdk_project::jenkins::jenkins_jobs_password:    ''
 cdk_project::jenkins::jenkins_jobs_username:    'gerrig'
