--- a/puppet/modules/runtime_project/files/hiera/layouts/util.yaml
+++ b/puppet/modules/runtime_project/files/hiera/layouts/util.yaml
@@ -39,9 +39,9 @@ cdk_project::status::logo:                        "puppet:///modules/openstack_p
 
 # 'graphite' tool
 cdk_project::graphite::vhost_name:                "%{::maestro::node_vhost_lookup::vname}"
-cdk_project::graphite::graphite_admin_user:       ''
-cdk_project::graphite::graphite_admin_email:      ''
-cdk_project::graphite::graphite_admin_password:   ''
+cdk_project::graphite::graphite_admin_user:       'admin'
+cdk_project::graphite::graphite_admin_email:      'graphite@localhost.org'
+# cdk_project::graphite::graphite_admin_password: it's on util.eyaml
 
 # 'paste' tool
 cdk_project::paste::vhost_name:                   "%{::maestro::node_vhost_lookup::vname}"
@@ -60,7 +60,7 @@ sysadmin_config::manage_servers::iptables_public_tcp_ports:
   - 8080
   - 8081
   - 8125
-sysadmin_config::manage_servers::iptables_rules4: 
+sysadmin_config::manage_servers::iptables_rules4:
   tool: "zuul"
   format_rule: '-m udp -p udp -s \1 --dport 8125 -j ACCEPT'
 sysadmin_config::manage_servers::sysadmins: ''
