Defect#1048: pastebin server is not running on ref pipeline and jura pipeline
Change-Id: If01ae394ff0a582464a2a93ae0659962c0de4ed3

--- a/puppet/modules.env
+++ b/puppet/modules.env
@@ -16,10 +16,14 @@
 # Array of modules to be installed key:value is module:version.
 # This is a list of our 3rd party modules we will allow install_modules.sh
 # to install.
-declare -A MODULES
 
-MODULES["puppetlabs-concat"]="1.0.0"
-MODULES["adrien/alternatives"]="0.1.1"
-MODULES["thias-postfix"]="0.3.0"
-MODULES["evenup-graphite_reporter"]="0.2.0"
-MODULES["puppetlabs-nodejs"]="0.4.0"
+unset DEFAULT_MODULES
+
+declare -A MODULES
+declare -A SOURCE_MODULES
+
+MODULES["puppetlabs-concat"]="1.0.0"; ORDERS+=( "puppetlabs-concat" )
+MODULES["adrien/alternatives"]="0.1.1"; ORDERS+=( "adrien/alternatives" )
+MODULES["thias-postfix"]="0.3.0"; ORDERS+=( "thias-postfix" )
+MODULES["evenup-graphite_reporter"]="0.2.0"; ORDERS+=( "evenup-graphite_reporter" )
+MODULES["puppetlabs-nodejs"]="0.4.0"; ORDERS+=( "puppetlabs-nodejs" )
