--- a/puppet/modules/runtime_project/files/hiera/layouts/review.yaml
+++ b/puppet/modules/runtime_project/files/hiera/layouts/review.yaml
@@ -133,7 +133,7 @@ maestro::backup::set_app_backup:
     db_name:          'reviewdb'
     db_backup_tool:   'mysqldump'
     db_user:          'gerrit2'
-    db_password:      "%{hiera('mysql_root_password')}"
+    db_password:      "%{hiera('mysql_password')}"
 
 # setup server (iptables, rsyslog, tcpdump, ssh)
 sysadmin_config::manage_servers::iptables_public_tcp_ports:
